Attempt to reach the cam from a container

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "babel-cli": "6.24.1",
     "babel-core": "6.24.1",
     "babel-plugin-transform-async-to-generator": "6.24.1",
-    "pi-camera": "0.3.3"
+    "node-raspistill": "0.0.12"
   },
   "scripts": {
     "start": "./node_modules/.bin/babel-node app.js"
