Use start script

--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -10,4 +10,4 @@ RUN JOBS=MAX npm install --production --unsafe-perm && npm cache clean && rm -rf
 
 COPY . ./
 
-CMD ["npm", "start"]
+CMD ["./start.sh"]
