--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -4,6 +4,9 @@ FROM resin/%%RESIN_MACHINE_NAME%%-node:6-slim
 ENV INITSYSTEM on
 WORKDIR /usr/src/app
 
+RUN apt-get -q update \
+ && apt-get -y install libraspberrypi-bin
+
 COPY package.json package.json
 
 RUN JOBS=MAX npm install --production --unsafe-perm && npm cache clean && rm -rf /tmp/*
